# personal-accompanist

./: .gitignore  README.md  commons.ly  constants.py  main.py  p_a.py  p_a_audio.py  p_a_constants.py  p_a_gui.py  p_a_lilypond.py  p_a_practice.py  p_a_scales_and_triads.py  packages.txt  personal-accompanist.py  pyproject.toml  requirements.txt  scales.py  widgets.py
.lilypond/: midi_7ca31149e8e54e879a79da673c0365e8.ly  midi_7ca31149e8e54e879a79da673c0365e8.midi  svg_7ca31149e8e54e879a79da673c0365e8.ly
personal_accompanist/: __init__.py  audio.py  gui.py  lilypond.py  widgets.py
practice_data/: __init__.py  a_major.py  b_flat_minor.py  b_major.py  c_sharp_minor.py  constants.py  d_flat_major.py  d_major.py  d_minor.py  e_flat_major.py  e_major.py  f_major.py  f_sharp_major.py  f_sharp_minor.py  g_sharp_minor.py
scales_and_triads_data/: __init__.py  a_flat_major.py  a_minor.py  b_flat_major.py  b_minor.py  c_major.py  c_minor.py  d_sharp_minor.py  e_flat_minor.py  e_minor.py  f_minor.py  g_flat_major.py  g_major.py  g_minor.py
